--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="main items">
         <article class="item">
           <header>
-            <a href="#"><img src="images/bug_report.png" alt=""/></a>
+            <a href="https://quo-vadimus.herokuapp.com/" target="_blank"><img src="images/bug_report.png" alt=""/></a>
 			<h3>Bug + Feature Tracker</h3>
           </header>
           <p>
@@ -61,7 +61,7 @@
         </article>
         <article class="item">
           <header>
-            <a href="#"><img src="images/ddv.png" alt=""/></a>
+            <a href="https://football-analyst.herokuapp.com/" target="_blank"><img src="images/ddv.png" alt=""/></a>
             <h3>Data Visualization</h3>
           </header>
           <p>
@@ -75,7 +75,7 @@
         </article>
         <article class="item">
           <header>
-            <a href="#"><img src="images/events.png" alt=""/></a>
+            <a href="https://marc-marquez.github.io/rosehip-angular/#/home" target="_blank"><img src="images/events.png" alt=""/></a>
             <h3>Rosehip Productions</h3>
           </header>
           <p>
@@ -157,7 +157,7 @@
           </li>
         </ul>
         <p class="copyright">
-          &copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>.
+          &copy; Marc Marquez Designs. Design: <a href="https://templated.co">TEMPLATED</a>.
           Images: <a href="https://unsplash.com">Unsplash</a>.
         </p>
       </footer>
