--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="main items">
         <article class="item">
           <header>
-            <a href="https://quo-vadimus.herokuapp.com/" target="_blank"><img src="images/bug_report.png" alt=""/></a>
+            <a href="https://quo-vadimus.herokuapp.com/" target="_blank"><img src="images/bug_report.jpg" alt=""/></a>
 			<h3>Bug + Feature Tracker</h3>
           </header>
           <p>
@@ -61,7 +61,7 @@
         </article>
         <article class="item">
           <header>
-            <a href="https://football-analyst.herokuapp.com/" target="_blank"><img src="images/ddv.png" alt=""/></a>
+            <a href="https://football-analyst.herokuapp.com/" target="_blank"><img src="images/ddv.jpg" alt=""/></a>
             <h3>Data Visualization</h3>
           </header>
           <p>
@@ -75,7 +75,7 @@
         </article>
         <article class="item">
           <header>
-            <a href="https://marc-marquez.github.io/rosehip-angular/#/home" target="_blank"><img src="images/events.png" alt=""/></a>
+            <a href="https://marc-marquez.github.io/rosehip-angular/#/home" target="_blank"><img src="images/events.jpg" alt=""/></a>
             <h3>Rosehip Productions</h3>
           </header>
           <p>
@@ -85,6 +85,19 @@
           <ul class="actions">
             <li><a href="https://marc-marquez.github.io/rosehip-angular/#/home" target="_blank" class="button">Demo</a></li>
 			<li><a href="https://github.com/marc-marquez/rosehip-angular" target="_blank" class="button">Github</a></li>
+          </ul>
+        </article>
+        <article class="item">
+          <header>
+            <a href="https://sassyshearssacramento.com" target="_blank"><img src="images/sassyshears.jpg" alt=""/></a>
+            <h3>Sassy Shears</h3>
+          </header>
+          <p>
+			Web/mobile responsive application promoting a local business using HTML5, CSS3, 
+			JavaScript, and Bootstrap.
+          </p>
+          <ul class="actions">
+            <li><a href="https://sassyshearssacramento.com" target="_blank" class="button">Demo</a></li>
           </ul>
         </article>
       </section>
