--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			CSS5, DC.js, D3.js and Crossfilter.js on the UI and Python with MongoDB on the back-end.
           </p>
           <ul class="actions">
-            <li><a href="https://football-analyst.herokuapp.com/" target="_blank" class="button">Demo</a></li>
+            		<!-- <li><a href="https://football-analyst.herokuapp.com/" target="_blank" class="button">Demo</a></li> -->
 			<li><a href="https://github.com/marc-marquez/football-analyst-heroku" target="_blank" class="button">Github</a></li>
           </ul>
         </article>
@@ -83,7 +83,7 @@
 			JavaScript, and Bootstrap.
           </p>
           <ul class="actions">
-            <li><a href="https://marc-marquez.github.io/rosehip-angular/#/home" target="_blank" class="button">Demo</a></li>
+            		<li><a href="https://marc-marquez.github.io/rosehip-angular/#/home" target="_blank" class="button">Demo</a></li>
 			<li><a href="https://github.com/marc-marquez/rosehip-angular" target="_blank" class="button">Github</a></li>
           </ul>
         </article>
